@@ -58,10 +58,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.4</source>
-					<target>1.4</target>
+					<source>1.5</source>
+					<target>1.5</target>
 					<encoding>ISO-8859-1</encoding>
 					<showDeprecation>true</showDeprecation>
+					<compilerArgument>-Xlint:unchecked</compilerArgument>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -119,7 +120,7 @@
 			<plugin>
 				<artifactId>maven-pmd-plugin</artifactId>
 				<configuration>
-					<targetjdk>1.4</targetjdk>
+					<targetjdk>1.5</targetjdk>
 					<rulesets>
 						<ruleset>${basedir}/pmd.xml</ruleset>
 					</rulesets>
