@@ -3,6 +3,7 @@
 
 New Features:
 
+  * Drop support for JDK 1.4.  Java 5 or later is now required to run JAMWiki.
   * Add an optional "Show Changes" button during editing to display a diff
     view of the current edit.
 
